--- a/src/App.css
+++ b/src/App.css
@@ -22,3 +22,17 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+.clock {
+  /* border: 1px solid blue; */
+}
+
+h2{
+  border: 2px solid black;
+  margin: 1% 20% 0 20%;
+}
+
+p{
+  border: 2px solid purple;
+  border-radius: 100px;
+  margin: 1% 40% 0 40%;
+}
